fixes dpt page top services spacing

--- a/src/components/Pages/_Department.scss
+++ b/src/components/Pages/_Department.scss
@@ -37,6 +37,7 @@
 .coa-DepartmentPage__topservices-header--desktop {
   color: $coa-color-white;
   font-weight: $coa-font-semibold;
+  margin-bottom: $coa-spacing-small;
 }
 
 .coa-DepartmentPage__topServiceButtons {
